--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
     <h1>Hello, world!</h1>
     <div class="row">
         <div class="column">
-          <img src="infographic.jpg" style="width: 25%">
+          <img src="infographic_preview.jpg" style="width: 25%">
         </div>
         <div class="column">
-            <img src="play.jpg" style="width: 50%">
+            <img src="play_preview.jpg" style="width: 50%">
         </div>
         <div class = "column">
         </div>
